# parallel-coding

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  exec.rs  git.rs  lib.rs  main.rs  meta.rs  templates.rs  vscode.rs
src/commands/: agent.rs
templates/components/base/devcontainer/: component.toml  compose.yaml  devcontainer.json
templates/components/extra/desktop/: component.toml  compose.yaml
templates/components/extra/vscode-extensions/: component.toml  compose.yaml
templates/components/lang/go/: component.toml  compose.yaml  devcontainer.json
templates/components/lang/java/: Dockerfile.part  component.toml  devcontainer.json
templates/components/lang/node/: component.toml  devcontainer.json
templates/components/lang/python/: component.toml  devcontainer.json
templates/components/lang/rust/: component.toml  devcontainer.json
templates/components/svc/postgres/: component.toml  compose.yaml  devcontainer.json
templates/components/svc/redis/: component.toml  compose.yaml  devcontainer.json
templates/profiles/node-pnpm/: profile.toml
templates/profiles/polyglot/: profile.toml
templates/profiles/python-uv/: profile.toml
templates/python-uv/: Dockerfile  compose.yaml  devcontainer.json
tests/: agent_rm_cli.rs  agent_workflow.rs  devcontainer_stealth.rs  e2e_real.rs  init_cli.rs  mock_external_tools.rs  new_agent_cli.rs  prop_agent_name.rs  templates_cli.rs  templates_compose.rs  up_cli.rs
tests/common/: mod.rs
(+15 files in other folders)
