[package]
name = "pc-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.31", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
proptest = "1.6.0"
tempfile = "3.15.0"

[[bin]]
name = "pc"
path = "src/main.rs"
